@@ -71,6 +71,7 @@ struct host_q		*simta_punt_q = NULL;
 struct simta_red	*simta_default_host = NULL;
 struct simta_red	*simta_red_hosts = NULL;
 struct simta_red	*simta_secondary_mx = NULL;
+struct simta_red	*simta_remote_hosts = NULL;
 unsigned int		simta_bounce_seconds = 259200;
 unsigned short		simta_smtp_port = 0;
 int			simta_domain_trailing_dot = 1;
@@ -297,6 +298,7 @@ simta_read_config( char *fname )
     struct action	*a;
     struct simta_ldap	*ld;
     int			host_type = RED_HOST_TYPE_LOCAL;
+    int			matched_remote;
 
     if ( simta_debug ) printf( "simta_config: %s\n", fname );
 
@@ -404,6 +406,7 @@ simta_read_config( char *fname )
 		domain = simta_hostname;
 	    }
 
+	    matched_remote = 0;
 	    if ( strcasecmp( av[ 2 ], "REMOTE" ) == 0 ) {
 		matched_remote = 1;
 		host_type = RED_HOST_TYPE_REMOTE;
@@ -462,15 +465,15 @@ simta_read_config( char *fname )
 			    fname, lineno );
 		    goto error;
 		}
-		t = strtol( ac[ 3 ], &f_arg, 0 );
-		if ( f_arg == ac[ 3 ] || *f_arg ) {
+		t = strtol( av[ 3 ], &f_arg, 0 );
+		if ( f_arg == av[ 3 ] || *f_arg ) {
 		    fprintf( stderr, "%s: line %d: incorrect syntax\n",
 			    fname, lineno );
 		    goto error;
 		}
 		red->red_min_wait = t;
-		t = strtol( ac[ 4 ], &f_arg, 0 );
-		if ( f_arg == ac[ 3 ] || *f_arg ) {
+		t = strtol( av[ 4 ], &f_arg, 0 );
+		if ( f_arg == av[ 3 ] || *f_arg ) {
 		    fprintf( stderr, "%s: line %d: incorrect syntax\n",
 			    fname, lineno );
 		    goto error;
@@ -710,6 +713,27 @@ simta_read_config( char *fname )
 	    }
 	    if ( simta_debug ) printf( "PUNT to %s\n", simta_punt_host );
 
+	} else if ( strcasecmp( av[ 0 ], "NO_PUNT" ) == 0 ) {
+	    if ( ac < 2 ) {
+		fprintf( stderr, "%s: line %d: expected at least 1 argument\n",
+			fname, lineno );
+		goto error;
+	    }
+	    for ( x = 1; x < ac; x++ ) {
+		if ( strlen( av[ x ]  ) > DNSR_MAX_HOSTNAME ) {
+		    fprintf( stderr,
+			    "%s: line %d: domain name too long\n", fname, lineno );
+		    goto error;
+		}
+
+		if (( red = simta_red_add_host( av[ x ],
+			RED_HOST_TYPE_REMOTE )) == NULL ) {
+		    perror( "malloc" );
+		    goto error;
+		}
+		red->red_no_punt = 1;
+		if ( simta_debug ) printf( "NO PUNTING for %s\n", av[ x ] );
+	    }
 	} else if ( strcasecmp( av[ 0 ], "BASE_DIR" ) == 0 ) {
 	    if ( ac != 2 ) {
 		fprintf( stderr, "%s: line %d: expected 1 argument\n",
